Core/objects/TrailheadEntityUpdate__c/TrailheadEntityUpdate__c.object-meta.xml
<CustomObject>
    <description>Custom object used to store the changed values of one or more watched fields on a Badge or Trail.</description>
    <label>Trailhead Entity Update</label>
    <nameField>
        <displayFormat>TEU-{000000}</displayFormat>
        <label>TrailheadEntityUpdate</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trailhead Entity Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>