Core/objects/TrailheadEntityUpdate__c/fields/Archived__c.field-meta.xml
<CustomField>
    <fullName>Archived__c</fullName>
    <description>New value of trailheadapp__Archived__c on trailheadapp__Badge__c or trailheadapp__Trail__c.</description>
    <label>Archived</label>
    <length>5</length>
    <type>Text</type>
</CustomField>