Core/objects/TrailheadEntityUpdate__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>New value of trailheadapp__Description__c on trailheadapp__Badge__c or trailheadapp__Trail__c.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>