Core/objects/TrailheadEntityUpdate__c/fields/EntityType__c.field-meta.xml
<CustomField>
    <fullName>EntityType__c</fullName>
    <description>Type of Trailhead entity (trailheadapp__Badge__c or trailheadapp__Trail__c) that record relates to updates of.</description>
    <label>Entity Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>trailheadapp__Badge__c</fullName>
            </value>
            <value>
                <fullName>trailheadapp__Trail__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>