Core/objects/TrailheadEntityUpdate__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>New value of Name on trailheadapp__Badge__c or trailheadapp__Trail__c.</description>
    <label>Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>