Core/objects/TrailheadEntityUpdate__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <description>New value of trailheadapp__Products__c on trailheadapp__Badge__c or trailheadapp__Trail__c.</description>
    <label>Products</label>
    <type>TextArea</type>
</CustomField>