Core/objects/TrailheadEntityUpdate__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>New value of trailheadapp__Type__c on trailheadapp__Badge__c.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Module</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Superbadge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>