Core/objects/TrailheadEntityUpdate__c/fields/UpdatedFields__c.field-meta.xml
<CustomField>
    <fullName>UpdatedFields__c</fullName>
    <description>List of fields that were changed on trailheadapp__Badge__c or trailheadapp__Trail__c.</description>
    <label>Updated Fields</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Description__c</fullName>
            </value>
            <value>
                <fullName>Icon__c</fullName>
            </value>
            <value>
                <fullName>Level__c</fullName>
            </value>
            <value>
                <fullName>Name__c</fullName>
            </value>
            <value>
                <fullName>Products__c</fullName>
            </value>
            <value>
                <fullName>Type__c</fullName>
            </value>
            <value>
                <fullName>URL__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>