Core/objects/TrailheadEntityUpdate__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>New value of trailheadapp__URL__c on trailheadapp__Badge__c or trailheadapp__Trail__c.</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>