Core/objects/TrailheadEntityUpdate__c/validationRules/Trail_Update_Should_Not_Have_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Trail_Update_Should_Not_Have_Type</fullName>
    <active>true</active>
    <description>Updates to trailheadapp__Trail__c records should not have the Type__c field populated because there is no such field on trailheadapp__Trail__c.</description>
    <errorConditionFormula>ISPICKVAL(EntityType__c, &apos;trailheadapp__Trail__c&apos;) &amp;&amp; NOT(ISPICKVAL(Type__c, &apos;&apos;))</errorConditionFormula>
    <errorMessage>Updates to trailheadapp__Trail__c records should not have the Type__c field populated because there is no such field on trailheadapp__Trail__c.</errorMessage>
</ValidationRule>